css/styles.css
/* ... */
/* ===================================================================
 * # INTRO
 *
 *
 * ------------------------------------------------------------------- */
.s-intro {
    padding-top : 6rem;
    width       : 100%;
    position    : relative;
}

.s-intro__content {
    position : relative;
}

/* --------------------------------------------------------------------
 * ## intro text
 * -------------------------------------------------------------------- */
.s-intro__text {
    z-index    : 2;
    width      : 100%;
    text-align : center;
    position   : relative;
    padding    : 3rem 0 2.5rem;
}

.s-intro__text h3 {
    font-family    : var(--font-1);
    font-size      : var(--text-xxxl);
    font-weight    : 400;
    line-height    : 1.0998;
    letter-spacing : -.01em;
    margin-top     : 0;
    color          : white;
}

.s-intro__text h3 span {
    color : white;
}

.s-intro__text-huge {
    --text-huge-size : 8rem;
    font-size        : var(--text-huge-size);
    line-height      : 1.1;
    letter-spacing   : -0.02em;
    margin-top       : 0;
    margin-bottom    : 0;
    color            : #0e0e0e;
}

/* --------------------------------------------------------------------
 * ## intro bg
 * -------------------------------------------------------------------- */
.s-intro__bg {
    aspect-ratio        : 1/1;
    width               : 100%;
    background-color    : var(--color-gray-4);
    background-image    : url(../images/jaume-photo.jpg);
    background-repeat   : no-repeat;
    background-position : center 20%;
    background-size     : cover;
    position            : relative;
}

.s-intro__bg::after {
    display        : block;
    content        : "";
    position       : absolute;
    top            : 0;
    left           : 0;
    right          : 0;
    bottom         : 0;
    width          : 100%;
    height         : 100%;
    background     : linear-gradient(180deg, black 5%, rgba(0, 0, 0, 0) 100%);
    pointer-events : none;
    opacity        : .12;
}

/* ------------------------------------------------------------------- 
 * responsive:
 * intro
 * ------------------------------------------------------------------- */
@media screen and (max-width: 1400px) {
    .s-intro__text-huge {
        --text-huge-size : 22rem;
    }
}

@media screen and (max-width: 1200px) {
    .s-intro__text-huge {
        --text-huge-size : 18vw;
    }
}

@media screen and (max-width: 1100px) {
    .s-intro__text h3 {
        font-size : var(--text-xxl);
    }
}

@media screen and (max-width: 1000px) {
    .s-intro {
        padding-top : 6rem;
    }
}

@media screen and (max-width: 900px) {
    .s-intro__text h3 {
        font-size : 3.2rem;
    }

    .s-intro__text-huge {
        margin-bottom : var(--vspace-1);
    }
}

@media screen and (max-width: 800px) {
    .s-intro__text h3 {
        font-size : 2.8rem;
    }

    .s-intro__text-huge {
        margin-bottom : var(--vspace-0_5);
    }
}

@media screen and (max-width: 600px) {
    .s-intro__text h3 {
        font-size : 4.6vw;
    }
}



/* ===================================================================
 * # ABOUT
 *
 *
 * ------------------------------------------------------------------- */
.s-about {
    --subtitle-line-height         : var(--vspace-1_5);
    --timeline-left-padding        : var(--vspace-1_75);
    --timeline-top-adjust          : calc(var(--subtitle-line-height) / 2);
    --timeline-vertical-border-pos : 8px;

    padding-top                    : var(--vspace-5);
    padding-bottom                 : var(--vspace-3);
}

.s-about__block {
    margin-bottom : var(--vspace-2);
}

.s-about__timeline {
    padding-top : var(--vspace-1_5);
}

.s-about__timeline-section {
    position : relative;
}

.s-about__timeline-section::before {
    content          : "";
    width            : 1px;
    height           : calc(100% - var(--timeline-top-adjust));
    background-color : var(--color-border);
    position         : absolute;
    top              : var(--timeline-top-adjust);
    left             : calc(var(--timeline-vertical-border-pos) + var(--gutter));
}

.s-about .text-subtitle {
    padding-left  : var(--timeline-left-padding);
    line-height   : var(--subtitle-line-height);
    margin-bottom : var(--vspace-0_25);
    position      : relative;
}

.s-about .text-subtitle::before {
    content          : "";
    display          : block;
    height           : 1px;
    width            : 3.2rem;
    background-color : var(--color-border);
    position         : absolute;
    top              : 50%;
    left             : calc(var(--timeline-vertical-border-pos) + 1px);
}

/* --------------------------------------------------------------------
 * ## about timelines
 * -------------------------------------------------------------------- */
.timeline {
    margin-top    : var(--vspace-1_5);
    padding-right : 1vw;
    position      : relative;
}

.timeline__block {
    padding-left   : var(--timeline-left-padding);
    padding-bottom : var(--vspace-0_5);
    position       : relative;
}

.timeline__block:last-child {
    padding-bottom : 0;
}

.timeline__bullet {
    display          : block;
    height           : 4.4rem;
    width            : 3px;
    background-color : var(--color-text-dark);
    position         : absolute;
    top              : 0;
    left             : calc(var(--timeline-vertical-border-pos) - 1px);
}

.timeline__title {
    font-family   : var(--font-2);
    font-weight   : 400;
    font-size     : var(--text-xl);
    line-height   : 1.0966;
    margin-top    : 0;
    margin-bottom : var(--vspace-0_125);
}

.timeline__meta {
    font-family   : var(--font-1);
    font-weight   : 400;
    font-size     : calc(var(--text-size) * 1.1053);
    margin-top    : 0;
    margin-bottom : var(--vspace-0_125);
}
/* ... */

